[tool.poetry]
name = "val-ipa-id"
version = '0.0.0'
description = ""
authors = ["Pierre-Yves Langlois <pierre-yves.langlois@dti.ulaval.ca>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
python-ldap = "*"
python-freeipa = "*"
